# vehicle_signal_interface

./: .gitignore  .gitmodules  CMakeLists.txt  vsi.pc.cmake.in
api/: vsi.c  vsi.h
socketcan-bindings/: Makefile  vsi-client.c  vsi-socketcand.c
src/: CMakeLists.txt
